[gd_scene load_steps=22 format=3 uid="uid://dsld38rpa1fuy"]

[ext_resource type="Script" path="res://script/ui/hud.gd" id="1_2fc33"]
[ext_resource type="Texture2D" uid="uid://de1o8vj4eqvnd" path="res://art/UI/panel.png" id="2_6235m"]
[ext_resource type="AudioStream" uid="uid://dj2pjuc25c8qb" path="res://sound/UI/transition.wav" id="2_ovih1"]
[ext_resource type="Texture2D" uid="uid://bnglh8wsr5b5d" path="res://art/UI/key.png" id="3_xm7lu"]
[ext_resource type="FontFile" uid="uid://ck4da2ppnatlb" path="res://font/visitor1.ttf" id="4_ql2oy"]
[ext_resource type="Texture2D" uid="uid://c2fodx8fubh1y" path="res://art/Tiles/Timer1.png" id="6_g6ngy"]
[ext_resource type="AudioStream" uid="uid://8rk2usk7yf18" path="res://sound/Player/change.wav" id="6_tjqvf"]
[ext_resource type="Texture2D" uid="uid://ul0gibay1vt0" path="res://art/Tiles/Timer2.png" id="7_gfa1q"]
[ext_resource type="AudioStream" uid="uid://cw23xvaolxdw1" path="res://sound/Player/alert.wav" id="9_wan7q"]
[ext_resource type="Texture2D" uid="uid://jing4r2ka65u" path="res://art/UI/transition.png" id="10_mtxp7"]

[sub_resource type="Animation" id="Animation_p4tiy"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-450, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("RightSide:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(476, -90)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("LeftSide:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-160, 270)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("../TransitionSound:playing")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_bw81f"]
resource_name = "transition"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-450, 0), Vector2(445, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("RightSide:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(476, -90), Vector2(476, 270)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("LeftSide:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-160, 270), Vector2(-160, -90)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("../TransitionSound:playing")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_y2n3j"]
_data = {
"RESET": SubResource("Animation_p4tiy"),
"transition": SubResource("Animation_bw81f")
}

[sub_resource type="LabelSettings" id="LabelSettings_x1mmc"]
font = ExtResource("4_ql2oy")
font_size = 10
shadow_size = 3
shadow_color = Color(0.988235, 0.25098, 0.25098, 1)
shadow_offset = Vector2(0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_rmq5b"]
line_spacing = -6.0
font = ExtResource("4_ql2oy")
font_size = 10
shadow_size = 3
shadow_color = Color(0.988235, 0.25098, 0.25098, 1)
shadow_offset = Vector2(0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_sii35"]
font = ExtResource("4_ql2oy")
font_size = 10
shadow_size = 12
shadow_color = Color(0.988235, 0.25098, 0.25098, 1)
shadow_offset = Vector2(0, 1)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_eg5nx"]
texture = ExtResource("6_g6ngy")
texture_margin_left = 3.0
texture_margin_top = 3.0
texture_margin_right = 3.0
texture_margin_bottom = 4.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_b5etv"]
texture = ExtResource("7_gfa1q")
texture_margin_left = 3.0
texture_margin_top = 3.0
texture_margin_right = 3.0
texture_margin_bottom = 3.0

[sub_resource type="Animation" id="Animation_5xu60"]
length = 0.001
loop_mode = 2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Keys/Left:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Keys/Left:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(138, 33)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Keys/Jump:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Keys/Jump:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(152, 33)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Keys/Right:scale")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Keys/Right:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(166, 33)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("NewControls:visible")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("Keys/Panel:position")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(159, 89)]
}

[sub_resource type="Animation" id="Animation_qc8qb"]
resource_name = "change"
length = 3.0
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Keys/Left:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.45, 2.1, 3),
"transitions": PackedFloat32Array(-3.73213, 1, -3.73213, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(2, 2), Vector2(2, 2), Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Keys/Left:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.45, 2.1, 3),
"transitions": PackedFloat32Array(-3.73213, 1, -3.73213, 1),
"update": 0,
"values": [Vector2(138, 33), Vector2(124, 78), Vector2(124, 78), Vector2(138, 33)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Keys/Jump:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.55, 2.1, 3),
"transitions": PackedFloat32Array(1, -3.73213, 1, -3.73213, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1, 1), Vector2(2, 2), Vector2(2, 2), Vector2(1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Keys/Jump:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.1, 0.55, 2.1, 3),
"transitions": PackedFloat32Array(1, -3.73213, 1, -3.73213, 1),
"update": 0,
"values": [Vector2(152, 33), Vector2(152, 33), Vector2(147, 53), Vector2(147, 53), Vector2(152, 33)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Keys/Right:scale")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.05, 0.5, 2.1, 3),
"transitions": PackedFloat32Array(1, -3.73213, 1, -3.73213, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1, 1), Vector2(2, 2), Vector2(2, 2), Vector2(1, 1)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Keys/Right:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 0.05, 0.5, 2.1, 3),
"transitions": PackedFloat32Array(1, -3.73213, 1, -3.73213, 1),
"update": 0,
"values": [Vector2(166, 33), Vector2(166, 33), Vector2(170, 78), Vector2(170, 78), Vector2(166, 33)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("NewControls:visible")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0.25, 2.4),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("Keys/Panel:position")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0, 0.15, 0.5, 2.4, 3),
"transitions": PackedFloat32Array(1, -2, 1, -2, 1),
"update": 0,
"values": [Vector2(159, 89), Vector2(159, 89), Vector2(159, 50), Vector2(159, 50), Vector2(159, 89)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_lmn0m"]
_data = {
"RESET": SubResource("Animation_5xu60"),
"change": SubResource("Animation_qc8qb")
}

[node name="HUD" type="CanvasLayer"]
visible = false

[node name="Transition" type="Node2D" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="Transition"]
root_node = NodePath("../Solid")
libraries = {
"": SubResource("AnimationLibrary_y2n3j")
}

[node name="ResetTimer" type="Timer" parent="Transition"]
wait_time = 0.5
one_shot = true

[node name="Solid" type="ColorRect" parent="Transition"]
offset_left = -450.0
offset_right = -130.0
offset_bottom = 180.0
color = Color(0.988235, 0.25098, 0.25098, 1)

[node name="RightSide" type="Sprite2D" parent="Transition/Solid"]
position = Vector2(476, -90)
texture = ExtResource("10_mtxp7")

[node name="Tile" type="Sprite2D" parent="Transition/Solid/RightSide"]
position = Vector2(0, 180)
texture = ExtResource("10_mtxp7")

[node name="Tile2" type="Sprite2D" parent="Transition/Solid/RightSide"]
position = Vector2(0, -180)
texture = ExtResource("10_mtxp7")

[node name="LeftSide" type="Sprite2D" parent="Transition/Solid"]
position = Vector2(-160, 270)
texture = ExtResource("10_mtxp7")
flip_h = true

[node name="Tile" type="Sprite2D" parent="Transition/Solid/LeftSide"]
position = Vector2(0, 180)
texture = ExtResource("10_mtxp7")
flip_h = true

[node name="Tile2" type="Sprite2D" parent="Transition/Solid/LeftSide"]
position = Vector2(0, -180)
texture = ExtResource("10_mtxp7")
flip_h = true

[node name="TransitionSound" type="AudioStreamPlayer" parent="Transition"]
stream = ExtResource("2_ovih1")
volume_db = -13.0
pitch_scale = 1.2

[node name="HUD" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_2fc33")

[node name="Keys" type="Node2D" parent="HUD"]
position = Vector2(1, -21)

[node name="Panel" type="Sprite2D" parent="HUD/Keys"]
position = Vector2(159, 89)
texture = ExtResource("2_6235m")

[node name="Left" type="Sprite2D" parent="HUD/Keys"]
position = Vector2(138, 33)
texture = ExtResource("3_xm7lu")
centered = false

[node name="Label" type="Label" parent="HUD/Keys/Left"]
offset_left = 1.0
offset_right = 11.0
offset_bottom = 12.0
text = "a"
label_settings = SubResource("LabelSettings_x1mmc")
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Label2" type="Label" parent="HUD/Keys/Left"]
offset_left = -15.0
offset_right = -5.0
offset_bottom = 12.0
text = "<-"
label_settings = SubResource("LabelSettings_rmq5b")
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Jump" type="Sprite2D" parent="HUD/Keys"]
position = Vector2(152, 33)
texture = ExtResource("3_xm7lu")
centered = false

[node name="Label" type="Label" parent="HUD/Keys/Jump"]
offset_left = 1.0
offset_right = 11.0
offset_bottom = 12.0
text = "a"
label_settings = SubResource("LabelSettings_x1mmc")
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Label2" type="Label" parent="HUD/Keys/Jump"]
offset_left = 1.0
offset_top = -11.0
offset_right = 11.0
offset_bottom = 1.0
text = "^
'"
label_settings = SubResource("LabelSettings_rmq5b")
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Right" type="Sprite2D" parent="HUD/Keys"]
position = Vector2(166, 33)
texture = ExtResource("3_xm7lu")
centered = false

[node name="Label" type="Label" parent="HUD/Keys/Right"]
offset_left = 1.0
offset_right = 11.0
offset_bottom = 12.0
text = "a"
label_settings = SubResource("LabelSettings_x1mmc")
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Label2" type="Label" parent="HUD/Keys/Right"]
offset_left = 17.0
offset_right = 27.0
offset_bottom = 12.0
text = "->"
label_settings = SubResource("LabelSettings_rmq5b")
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="NewControls" type="Label" parent="HUD"]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = 0.328125
anchor_top = 0.416667
anchor_right = 0.578125
anchor_bottom = 0.416667
offset_left = -20.25
offset_top = 13.6889
offset_right = 47.75
offset_bottom = 25.6889
text = "new controls!"
label_settings = SubResource("LabelSettings_sii35")
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="FlippityFloppityTimer" type="ProgressBar" parent="HUD"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 51.0
offset_top = 3.0
offset_right = 139.0
offset_bottom = 17.0
grow_horizontal = 2
theme_override_styles/background = SubResource("StyleBoxTexture_eg5nx")
theme_override_styles/fill = SubResource("StyleBoxTexture_b5etv")
max_value = 20.0
value = 20.0
show_percentage = false
metadata/_edit_use_anchors_ = true

[node name="FlipTimerLabel" type="Label" parent="HUD/FlippityFloppityTimer"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.21875
anchor_top = 0.0222222
anchor_right = 0.46875
anchor_bottom = 0.0222222
offset_left = -20.25
offset_top = 13.6889
offset_right = 47.75
offset_bottom = 25.6889
text = "controls change"
label_settings = SubResource("LabelSettings_x1mmc")
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="HUD"]
libraries = {
"": SubResource("AnimationLibrary_lmn0m")
}

[node name="ChangeSound" type="AudioStreamPlayer" parent="HUD"]
stream = ExtResource("6_tjqvf")
volume_db = -11.0
pitch_scale = 0.5

[node name="Alert" type="AudioStreamPlayer" parent="HUD"]
stream = ExtResource("9_wan7q")
volume_db = -11.0
pitch_scale = 1.2

[connection signal="timeout" from="Transition/ResetTimer" to="HUD" method="next_lev"]
